frontend/src/scss/layout/_typography.scss
@use '../abstracts' as *;
@use 'spacing' as *;
@use 'container' as *;
@use './../theme/colors' as *;

.normal {
	font-size: $body-2;
}

.fs-md {
	font-size: $body-1;
}

.normal-sm {
	font-size: $small;

	@include breakpoint-min(md) {
		font-size: $body-2;
	}
}

.normal-lg {
	font-size: $body-2;

	@include breakpoint-min(md) {
		font-size: $body-1;
	}
}

.heading-font {
	font-family: $font-heading;
}

.section-heading {
	h1,
	h2,
	h3,
	h4 {
		margin: 0;
		@extend .heading-font !optional;
	}

	margin-bottom: $heading-spacer;

	h1,
	h2 {
		font-size: $h4-font-size;
		@include breakpoint-min(md) {
			font-size: $h3-font-size;
		}
	}

	&-sm {
		@extend .section-heading !optional;
		margin-bottom: $heading-spacer-sm;

		h1,
		h2 {
			@extend .heading-sm !optional;
			@extend .heading-font !optional;
			margin: 0px !important;
		}
	}
}

.heading-sm {
	font-size: $body-1;
	margin-bottom: $heading-spacer-sm;

	@include breakpoint-min(md) {
		font-size: $h4-font-size;
	}
}

h1,
.h1 {
	font-size: $h1-font-size;
}
h2,
.h2 {
	font-size: $h2-font-size;
}
h3,
.h3 {
	font-size: $h3-font-size;
}
h4,
.h4 {
	font-size: $h4-font-size;
}

.fw-medium {
	font-weight: $fw-medium;
}

.fw-semi-bold {
	font-weight: $fw-semi-bold;
}

.text-uppercase {
	text-transform: uppercase;
	font-weight: $fw-bold;
	font-family: $font-body;
}

.caption {
	font-size: $caption;
	margin-bottom: rem(3);
}

.normal--uppercase {
	@extend .text-uppercase !optional;
	font-size: $body-2;
}

.caption--uppercase {
	@extend .caption !optional;
	@extend .text-uppercase !optional;
}

.caption--uppercase-label {
	font-size: $caption;
	@extend .text-uppercase !optional;
	color: $muted;
	margin-bottom: rem(12);
}

%text-truncate {
	white-space: nowrap;
	text-overflow: ellipsis;
	overflow: hidden;
}

%multi-line-truncate {
	display: -webkit-box;
	-webkit-box-orient: vertical;
	overflow: hidden;
	-webkit-line-clamp: 2;
	text-overflow: ellipsis;
}

@mixin multi-line-truncate($lines: 2) {
	@extend %multi-line-truncate;
	-webkit-line-clamp: $lines;
}

.nav-link {
	font-family: $font-heading;
}

%nav-mobile-headings {
	@include breakpoint-max(lg) {
		display: block;
		margin-bottom: $text-spacer-xs;
		font-size: $caption;
		color: $text-muted;
		text-transform: uppercase;
		font-weight: $fw-bold;
		font-family: $font-body;
	}
}

.details {
	.card-title,
	.event-name,
	.card-subtitle,
	.subtitle,
	.event-detail,
	.row > .col > * {
		@extend %text-truncate !optional;
	}
	.card-title,
	.event-name {
		font-size: $body-1;
		margin-bottom: rem(13);
		font-weight: $fw-semi-bold;
	}

	.card-subtitle,
	.subtitle {
		order: -1;
		margin-bottom: rem(8);
		@extend .caption !optional;
		@extend .text-uppercase !optional;
		color: $muted;
	}
}

.disclaimer {
	display: block;
	font-size: $caption;
	color: $text-muted;
}

// event details: hero, event, event popup
.time-caption,
.venue-caption,
.location-caption {
	@extend .caption !optional;
	@extend %icon-text-box !optional;
	gap: $gap-xs;
	color: $clr-neutral-4;
	font-weight: $fw-semi-bold;
	line-height: 0;
}

.time-caption {
	&::before {
		content: url($data-svg-prefix + map-get($icons, 'calendar'));
	}
}

.venue-caption {
	&::before {
		content: url($data-svg-prefix + map-get($icons, 'venue'));
	}
}

.location-caption {
	&::before {
		content: url($data-svg-prefix + map-get($icons, 'location'));
	}
}

// bulleted event details: event, ticket card, paymentConfirmation
.time,
.loc,
.venue {
	&::before {
		content: '\2022';
		position: relative;
		margin: 0px rem(3);
		left: em(-2);
	}
}

.num-tickets {
	font-size: $caption;
	font-weight: $fw-semi-bold;
	@extend %icon-text-box !optional;
	gap: $gap-sm;
	&::before {
		content: url($data-svg-prefix + map-get($icons, 'ticketOutline'));
	}
}

.list {
	padding-left: 0px;
	padding-right: 0px;
	.heading {
		font-weight: $fw-medium;
		margin-bottom: rem(8);
	}

	& + .list:not(.list.list-group-item) {
		margin-top: rem(20);
	}
}

// docs styling
.docs {
	p {
		font-size: $small;

		+ p {
			margin-top: $text-spacer-xs;
		}
	}

	&-heading {
		font-size: $h3-font-size;
		margin-bottom: $text-spacer-xs;
	}

	&-desc {
		font-size: $body-2;
	}

	&-section {
		&-heading {
			font-size: $body-1;
			margin: $text-spacer-lg 0px $text-spacer-xs;
		}
	}

	&-date {
		margin-bottom: $text-spacer-xs;
	}

	ul {
		padding-left: $text-spacer;
		li {
			list-style-type: disc;
			margin-bottom: rem(4);

			.list-heading {
				font-weight: $fw-semi-bold;
				margin-bottom: rem(8);
			}
		}
	}

	.unstyled-list {
		ul {
			padding-left: $text-spacer-xs;
		}
		& li {
			list-style: none;

			ul {
				margin-top: 0px;
				padding: 0px;
			}
		}
	}

	.unstyled-list > ul > li ~ li {
		padding-top: $text-spacer-xs;
	}

	dl,
	ul {
		font-size: $small;
		margin: rem(10) 0px;
	}

	dd {
		margin-bottom: rem(3);
	}

	dl:not(.unstyled-list) {
		dt,
		dd {
			display: inline;
		}
	}

	dl.float {
		dt:not(:first-of-type) {
			float: left;
			margin-right: rem(3);
		}

		dt:first-of-type {
			margin-bottom: rem(4);
		}
	}
}

